--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li>Kubernet</li>
-        <li>docker</li>
+        <li>docker: curso container</li>
         <li>Curso alunoo</li>
     </ul>
 </body>
