--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Kubernet</li>
         <li>Docker: curso container</li>
         <li>Curso alunoo</li>
+        <li>Vagrant</li>
     </ul>
 </body>
 </html>
