adiciioona linha java

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Kubernet</li>
         <li>Docker</li>
         <li>Curso alunoo</li>
+        <li>java</li>
     </ul>
 </body>
 </html>
